--- a/assets/css/styleHeaderFooter.css
+++ b/assets/css/styleHeaderFooter.css
@@ -1,8 +1,11 @@
 #container-bordure {
     background-image: url("/Fil_Rouge_AFPA/annexe/Charte/BACKGROUND/background_village.png");
-    Background-position: center;
+    /* Background-position: center;
     width: 100%;
-    height: auto;
+    height: auto; */
+    
+    background-size: cover;
+
     
 }
 
