--- a/assets/css/styleSite.css
+++ b/assets/css/styleSite.css
@@ -1,3 +1,4 @@
+/* TODO FUSION DES FEUILLES DE STYLE CSS EN UN SEUL FICHIER A LA FIN DU PROJET - UN SEUL APPEL DANS LE FOOTER */
 #rouge {
     color: red;
 }
