--- a/assets/css/styleSite.css
+++ b/assets/css/styleSite.css
@@ -1,4 +1,5 @@
 /* TODO FUSION DES FEUILLES DE STYLE CSS EN UN SEUL FICHIER A LA FIN DU PROJET - UN SEUL APPEL DANS LE FOOTER */
+
 #rouge {
     color: red;
 }
@@ -67,11 +68,47 @@ legend {
 }
 
 
-/* gerer le responsive avec variation du width en fonction de la résolution */
+/* gestion du positionnement du scroll dans les cards en fonction du responsive */
 
 .overflow-ellipsis {
     width: 253px;
     height: 160px;
     overflow-y: scroll;
     overflow-x: hidden;
+}
+
+@media (max-width: 1199px) {
+    .overflow-ellipsis {
+        width: 208px;
+        height: 160px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+}
+
+@media (max-width: 991px) {
+    .overflow-ellipsis {
+        width: 286px;
+        height: 160px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+}
+
+@media (max-width: 767px) {
+    .overflow-ellipsis {
+        width: 239px;
+        height: 160px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+}
+
+@media (max-width: 575px) {
+    .overflow-ellipsis {
+        width: 286px;
+        height: 160px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
 }
