--- a/assets/css/federer.css
+++ b/assets/css/federer.css
@@ -13,13 +13,14 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.8s;
+    transition: transform 0.9s;
     transform-style: preserve-3d;
   }
   
   /* Do an horizontal flip when you move the mouse over the flip box container */
   .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
+    transform: rotateY(180deg)
+    /* transform: rotateY(1980deg) rotateX(360deg) rotateZ(720deg); */
   }
   
   /* Position the front and back side */
