--- a/assets/css/styleHeaderFooter.css
+++ b/assets/css/styleHeaderFooter.css
@@ -4,9 +4,8 @@
     background-size: cover;
 
 }
-
+/* retrait de l'image, qui gere une "barre de vide" à chaque retour du fichier. Definition d'une couleur fixe pour le container. */
 #container-centre {
-    /* retrait de l'image, qui gere une "barre de vide" à chaque retour du fichier. Definition d'une couleur fixe pour le container. */
     background-color: #e7e7e7;
     Background-position: center;
     width: 100%;
@@ -23,11 +22,13 @@
     position: relative;
 }
 
-#imageFooter {
-    
+
+/* Pas encore utilisé */
+#imageFooter {   
+
 }
 
-/* Gestion du chevauchement du logo VillageGreen et de la NavBar dans le Header */
+/* Gestion du chevauchement du logo VillageGreen et de la NavBar dans le Header pour les formats Mobiles (Testés avec Firefox) */
 
 @media (max-width: 1199px) {
     #LogoVillageGreen {
@@ -57,12 +58,6 @@
     #LogoVillageGreen {
         width: 150px;
     }
-}
-
-/* @media (max-width: 320px) {
-    #LogoVillageGreen {
-        width: 800%;
-    } */
 }
 
 
