--- a/assets/css/styleSite.css
+++ b/assets/css/styleSite.css
@@ -112,3 +112,17 @@ legend {
         overflow-x: hidden;
     }
 }
+
+.text-right {
+    text-align: right;
+    margin: 20px;
+}
+
+
+/* .text-center {
+    text-align: center;
+} */
+
+.img-panier {
+    width: 90%;
+}
