--- a/assets/css/styleHeaderFooter.css
+++ b/assets/css/styleHeaderFooter.css
@@ -22,12 +22,6 @@
     position: relative;
 }
 
-
-/* Pas encore utilisé */
-#imageFooter {   
-
-}
-
 /* Gestion du chevauchement du logo VillageGreen et de la NavBar dans le Header pour les formats Mobiles (Testés avec Firefox) */
 
 @media (max-width: 1199px) {
@@ -60,6 +54,43 @@
     }
 }
 
+/* Gestion du bouton Pulsate du panier dans le header*/
 
+.badge {
+    display: inline-block;
+    background-color: #37B35A;
+    border-radius: 50%;
+    color: #fff;
+    padding: 0.5em 0.75em;
+    position: relative;
+  }
+  
+.pulsate::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    animation: pulse 1s ease infinite;
+    border-radius: 50%;
+    border: 4px double #37B35A;
+  }
+  
+@keyframes pulse {
+    0% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    60% {
+      transform: scale(1.3);
+      opacity: 0.4;
+    }
+    100% {
+      transform: scale(1.4);
+      opacity: 0;
+    }
+  }
 
 
